[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
must_use_candidate = "allow"

[workspace]
members = [
	"crates/binary_search",
	"crates/contains_duplicate",
	"crates/is_palindrome",
	"crates/two_sum",
	"crates/valid_anagram",
]
resolver = "2"
